sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:9: error: not found: value swapped
				swapped=true;
                                ^AlgBubbleSort2:10: error: not found: value swapped
			}else if(swapped==false){
                                 ^